Update GraphTests.java